<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">WorldMedic-Android</string>
    <string name="label_powered_by">Powered by WorldMedic</string>
    <string name="label_main_menu">Main Menu</string>
    <string name="check">Check</string>
    <string name="count">Count</string>
    <string name="order">Order</string>
    <string name="receive">Receive</string>
    <string name="setting">Setting</string>
    <string name="close">Close</string>
    <string name="about_us">About Us</string>
    <string name="about_desc"><![CDATA[©Copyright WorldMedic Information & Technology. 1998-2030. www.worldmedic.com]]></string>
    <string name="url_endpoint">URL Endpoint</string>
    <string name="tutorial">Tutorial</string>
    <string name="software_update">Software update</string>
    <string name="scanning_process">Scanning Process</string>
    <string name="prepare_master_data">Prepare master data</string>
    <string name="etc">etc.</string>
    <string name="error">System Error</string>
    <string name="error_desc">Sorry system is not available temporarily. please try again later. thank you.</string>
    <string name="use_camera">Use Camera</string>
    <string name="fcname">Generic name: %s</string>
    <string name="fprice">Normal Price: %s</string>
    <string name="fstore">Store: %s</string>
    <string name="fcode">Product Code: %s</string>
    <string name="famount">Remaining Amount: %d</string>
    <string name="ffree">Free Amount: %s</string>
    <string name="flotno">Lot No.: %s</string>
    <string name="fexpdate">Exp Date: %s</string>
    <string name="save">Save</string>
    <string name="label_error_data_empty">Input data is not correct.</string>
    <string name="show_all_history">Show all history</string>
    <string name="amount">Amount</string>
    <string name="hint_amount">Please enter amount</string>
    <string name="make_an_order">Make an order</string>
    <string name="hint_free_amount">Please enter free amount</string>
    <string name="free_amount">Free amount</string>
    <string name="confirm_to_add_product">Confirm to add product</string>
    <string name="label_lot_no">Lot no.</string>
    <string name="hint_lot_no">Please enter Lot no.</string>
    <string name="hint_exp_date">2022-01-24</string>
    <string name="label_exp_date">Expire date</string>
    <string name="order_history">Order History</string>
    <string name="count_history">Count History</string>
    <string name="label_unit">Unit: %s</string>
    <string name="label_packaging">Packaging unit: %s</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Yes, Delete now!</string>
    <string name="title_delete">Confirm to delete.</string>
    <string name="desc_delete">Do you want to delete %s amount: %d?</string>
    <string name="receive_history">Receive History</string>
    <string name="desc_getting_started"><![CDATA[1. Please make sure the API and database are completely installed.<br>2. go to \'http://{your ip server}/worldMedic/setup.php\'<br>3. Click Scan Now for using.]]>
</string>
    <string name="scan_now">Scan Now!</string>
    <string name="getting_stared">Getting Stared</string>
    <string name="data_not_found">Data not found</string>

    <string name="datawedge_intent_key_source" translatable="false">com.symbol.datawedge.source</string>
    <string name="datawedge_intent_key_label_type" translatable="false">com.symbol.datawedge.label_type</string>
    <string name="datawedge_intent_key_data" translatable="false">com.symbol.datawedge.data_string</string>

</resources>