<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="viewModel"
            type="com.android.topscare.ui.history.order.dialog.ConfirmDeleteOrderDialogViewModel"/>
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/size_16"
        app:cardElevation="@dimen/size_10">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/size_20">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/start_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/page_side_margin" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/end_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/page_side_margin" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/top_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="@dimen/status_bar_height" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/size_16"
                android:text="@{viewModel._title}"
                style="@style/TextAppearance.Headline4"
                tools:text="@string/error"
                app:layout_constraintTop_toBottomOf="@id/top_guideline"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:layout_constraintStart_toStartOf="@id/start_guideline" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10"
                android:text="@{viewModel._desc}"
                style="@style/TextAppearance.Body"
                android:gravity="center"
                tools:text="@string/error_desc"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toBottomOf="@+id/label_title" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_continue"
                style="@style/ActionButtonTheme.Primary"
                android:layout_width="@dimen/size_0"
                android:layout_marginTop="@dimen/size_24"
                android:layout_marginEnd="@dimen/size_14"
                android:layout_marginStart="@dimen/size_14"
                android:onClick="@{() -> viewModel.onCancelPressed()}"
                android:text="@string/cancel"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toBottomOf="@id/label_description" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_cancel"
                style="@style/ActionButtonTheme.Secondary"
                android:layout_width="@dimen/size_0"
                android:layout_marginEnd="@dimen/size_14"
                android:layout_marginStart="@dimen/size_14"
                android:onClick="@{() -> viewModel.onConfirmPressed()}"
                android:text="@string/confirm"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toBottomOf="@id/button_continue" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>