<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.android.topscare.ui.getting_started.GettingStartedViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/page_side_margin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/page_side_margin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/status_bar_height" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label_title_page"
            style="@style/TextAppearance.Headline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginTop="@dimen/size_16"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:maxLines="1"
            android:text="@string/setting"
            android:textColor="@color/gray_700"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/top_guideline"
            tools:text="Getting Stared" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_bg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/bg"
            android:alpha=".5"
            android:adjustViewBounds="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/size_16"
            android:layout_marginBottom="@dimen/size_16"
            app:layout_constraintBottom_toTopOf="@id/button_scan"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/label_title_page">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/desc_getting_start"
                    style="@style/TextAppearance.Body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:textColor="@color/gray_700"
                    tools:text="@string/desc_getting_started" />
            </LinearLayout>
        </ScrollView>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_scan"
            style="@style/ActionButtonTheme.Primary"
            android:layout_width="0dp"
            android:layout_marginBottom="@dimen/size_24"
            android:enabled="@{!viewModel.dataStates.isLoading()}"
            android:onClick="@{() -> viewModel.onStartNow()}"
            android:text="@string/scan_now"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray_700"
            android:alpha="0.6"
            app:isVisible="@{viewModel.dataStates.isLoading()}"
            />
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:animatedVisibility="@{viewModel.dataStates.isLoading()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>