<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.android.topscare.ui.setting.tutorial.TutorialViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/page_side_margin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/page_side_margin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/status_bar_height" />

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginTop="@dimen/page_side_margin"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="fitCenter"
            android:onClick="@{()->viewModel.onBackPressed()}"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toTopOf="@id/top_guideline" />

        <TextView
            android:id="@+id/label_title_page"
            style="@style/TextAppearance.Headline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginTop="@dimen/size_16"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:maxLines="1"
            android:text="@string/tutorial"
            android:textColor="@color/gray_700"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/btn_back"
            tools:text="Tutorial" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_bg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/bg"
            android:alpha=".5"
            android:adjustViewBounds="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/size_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/label_title_page">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <com.google.android.material.button.MaterialButton
                        style="@style/ActionButtonTheme.Secondary"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:layout_gravity="start|center_vertical"
                        android:maxLines="1"
                        android:textSize="16sp"
                        android:onClick="@{()->viewModel.onScanningProcessPressed()}"
                        android:text="@string/scanning_process"
                        android:textColor="@color/gray_600"
                        app:layout_constraintEnd_toStartOf="@id/btn_next2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        />
                    <ImageButton
                        android:id="@+id/btn_next2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center_vertical"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:scaleType="fitCenter"
                        android:onClick="@{()->viewModel.onScanningProcessPressed()}"
                        android:src="@drawable/ic_arrow_right"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray_200"/>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <com.google.android.material.button.MaterialButton
                        style="@style/ActionButtonTheme.Secondary"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:maxLines="1"
                        android:textSize="16sp"
                        android:textAlignment="textStart"
                        android:text="@string/prepare_master_data"
                        android:onClick="@{()->viewModel.onPreparePressed()}"
                        android:textColor="@color/gray_600"
                        app:layout_constraintEnd_toStartOf="@id/btn_next3"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        />
                    <ImageButton
                        android:id="@+id/btn_next3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center_vertical"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:scaleType="fitCenter"
                        android:onClick="@{()->viewModel.onPreparePressed()}"
                        android:src="@drawable/ic_arrow_right"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray_200"/>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <com.google.android.material.button.MaterialButton
                        style="@style/ActionButtonTheme.Secondary"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:maxLines="1"
                        android:textSize="16sp"
                        android:textAlignment="textStart"
                        android:text="@string/etc"
                        android:onClick="@{()->viewModel.onEtcPressed()}"
                        android:textColor="@color/gray_600"
                        app:layout_constraintEnd_toStartOf="@id/btn_next4"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        />
                    <ImageButton
                        android:id="@+id/btn_next4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center_vertical"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:scaleType="fitCenter"
                        android:onClick="@{()->viewModel.onEtcPressed()}"
                        android:src="@drawable/ic_arrow_right"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>